--- a/self-serve-python-flask/flaskapp/templates/index.html
+++ b/self-serve-python-flask/flaskapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-        <h1>Hello, {{ user.username }}!</h1>
+        <h1>Pulumi Self Service</h1>
         {% for stack in stacks %}
         <div><p><b>{{ stack.name }}</b> outputs: 
           {% for output in stack.outputs %}
