--- a/self-serve-python-flask/flaskapp/templates/index.html
+++ b/self-serve-python-flask/flaskapp/templates/index.html
@@ -4,9 +4,8 @@
         <h1>Pulumi Self Service</h1>
         {% for stack in stacks %}
         <div><p><b>{{ stack.name }}</b> outputs: 
-          {% for output in stack.outputs %}
-            <p>{{ output.outputname }}: {{ output.outputvalue }}</p>
-          {% endfor %}
+          <br>
+          {{ stack.outputs }}
         </p></div>
         {% endfor %}
 {% endblock %}
