--- a/self-serve-python-flask/flaskapp/templates/base.html
+++ b/self-serve-python-flask/flaskapp/templates/base.html
@@ -10,6 +10,7 @@
     <div>Pulumi Self Service: 
       <!-- <a href="{{ url_for('current') }}">Current_Environments</a> -->
       <a href="{{ url_for('deploy') }}">Deploy_New_Environment</a>
+      <a href="{{ url_for('destroy') }}">Destroy_Existing_Environment</a>
     </div>
   </nav>
 {% endblock %}
